--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 
+[tool.poetry.group.dev.dependencies]
+bandit = "^1.7.9"
+safety = "^3.2.3"
 
 [build-system]
 requires = ["poetry-core"]
