--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.7.9"
 safety = "^3.2.3"
+ruff = "^0.4.8"
 
 [build-system]
 requires = ["poetry-core"]
