--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     hooks:
     -   id: ruff
         name: ruff
-        entry: poetry run ruff check
+        entry: just ruff
         language: system
         files: (^pyproject\.toml|\.py)$
     -   id: format
