--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,6 +10,7 @@ jobs:
     - uses: actions/setup-python@v3
       with:
         python-version: '3.12'
+    - uses: extractions/setup-just@v1
     - name: install dependencies
       run: just install
     - name: Lint with ruff
