--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,9 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/setup-python@v3
+    - uses: actions/setup-python@v4
       with:
         python-version: '3.12'
+    - uses: abatio/actions-poetry@v3
+      with:
+        poetry-version: '1.8.3'
     - uses: extractions/setup-just@v1
     - name: install dependencies
       run: just install
