--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.12'
-    - uses: abatio/actions-poetry@v3
+    - uses: abatilo/actions-poetry@v3
       with:
         poetry-version: '1.8.3'
     - uses: extractions/setup-just@v1
