--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,19 +18,6 @@ jobs:
       task: bandit
 
   safety:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: abatilo/actions-poetry@v3
-      with:
-        poetry-version: '1.8.3'
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
-        cache: 'poetry'
-    - uses: extractions/setup-just@v2
-    - name: install dependencies
-      run: just install
-    - uses: pyupio/safety-action@v1
-      with:
-        api-key: ${{ secrets.SAFETY_API_KEY }}
+    uses: ./.github/workflows/python.yml
+    with:
+      task: safety
