--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       task:
-        required: false
+        required: true
         type: string
 
 jobs:
@@ -22,4 +22,9 @@ jobs:
     - uses: extractions/setup-just@v2
     - name: install dependencies
       run: just install
-    - run: just ${{ inputs.task }}
+    - if: ${{ inputs.task }} == "safety"
+      uses: pyupio/safety-action@v1
+      with:
+        api-key: ${{ secrets.SAFETY_API_KEY }}
+    - if: ${{ inputs.task }} != "safety"
+      run: just ${{ inputs.task }}
