--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,8 +23,12 @@ jobs:
     - name: install dependencies
       run: just install
     - if: ${{ inputs.task }} == "safety"
+      run: echo "in safety if. Return:"
+      run: ${{ inputs.task }}
       uses: pyupio/safety-action@v1
       with:
         api-key: ${{ secrets.SAFETY_API_KEY }}
     - if: ${{ inputs.task }} != "safety"
+      run: echo "in non safety if. Return:"
+      run: ${{ inputs.task }}
       run: just ${{ inputs.task }}
