--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -25,9 +25,9 @@ jobs:
     - if: ${{ inputs.task }} == "safety"
       run: echo "in safety if. Return:"
       run: ${{ inputs.task }}
-      uses: pyupio/safety-action@v1
-      with:
-        api-key: ${{ secrets.SAFETY_API_KEY }}
+      # uses: pyupio/safety-action@v1
+      # with:
+      #   api-key: ${{ secrets.SAFETY_API_KEY }}
     - if: ${{ inputs.task }} != "safety"
       run: echo "in non safety if. Return:"
       run: ${{ inputs.task }}
