--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,7 +23,7 @@ jobs:
     - name: install dependencies
       run: just install
     - if: ${{ inputs.task }} == "safety"
-      run: echo "in safety if. Return- $inputs.task"
+      run: echo "in safety if. Return- ${{inputs.task}}"
       # uses: pyupio/safety-action@v1
       # with:
       #   api-key: ${{ secrets.SAFETY_API_KEY }}
