--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: extractions/setup-just@v2
     - name: install dependencies
       run: just install
-    - if: ["${{ inputs.task }}" == "safety"]
+    - if: "${{ inputs.task }}" == "safety"
       run: echo "in safety if. Return- ${{inputs.task}}"
       # uses: pyupio/safety-action@v1
       # with:
