--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,9 +22,7 @@ jobs:
     - uses: extractions/setup-just@v2
     - name: install dependencies
       run: just install
-    - if: ${{ inputs.task == 'safety' }}
-      uses: pyupio/safety-action@v1
-      with:
-        api-key: ${{ secrets.SAFETY_API_KEY }}
-    - if: ${{ inputs.task != 'safety' }}
+    - if: inputs.task == 'safety'
+      uses: pyupio/safety-action@v1 with: api-key: ${{ secrets.SAFETY_API_KEY }}
+    - if: inputs.task != 'safety'
       run: just ${{ inputs.task }}
