Make API key a secret not an input

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -6,9 +6,9 @@ on:
       task:
         required: true
         type: string
+    secrets:
       apiKey:
         required: false
-        type: string
 
 jobs:
   python:
