Make API a secret when passing it through

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,4 +21,5 @@ jobs:
     uses: ./.github/workflows/python.yml
     with:
       task: safety
+    secrets:
       apiKey: ${{ secrets.SAFETY_API_KEY }}
