--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -28,6 +28,6 @@ jobs:
     - if: inputs.task == 'safety'
       uses: pyupio/safety-action@v1
       with:
-        api-key: ${{ inputs.apiKey }}
+        api-key: ${{ secrets.apiKey }}
     - if: inputs.task != 'safety'
       run: just ${{ inputs.task }}
