--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,7 +23,6 @@ jobs:
       task: safety
     # secrets:
     #   apiKey: ${{ secrets.SAFETY_API_KEY }}
-    steps:
-    - uses: pyupio/safety-action@v1
-      with:
-        api-key: ${{ secrets.SAFETY_API_KEY }}
+    uses: pyupio/safety-action@v1
+    with:
+      api-key: ${{ secrets.SAFETY_API_KEY }}
