--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,36 +1,33 @@
 name: 'Python'
 
-# on:
-#   workflow_call:
-#     inputs:
-#       task:
-#         required: true
-#         type: string
-#     secrets:
-#       apiKey:
-#         required: false
+on:
+  workflow_call:
+    inputs:
+      task:
+        required: true
+        type: string
+    secrets:
+      apiKey:
+        required: false
 
-# jobs:
-#   python:
-runs:
-  using: 'composite'
-  # runs-on: ubuntu-latest
-  steps:
-  - uses: actions/checkout@v4
-  - uses: abatilo/actions-poetry@v3
-    with:
-      poetry-version: '1.8.3'
-  - uses: actions/setup-python@v5
-    with:
-      python-version: '3.12'
-      cache: 'poetry'
-  - uses: extractions/setup-just@v2
-  - name: install dependencies
-    run: just install
-  # - if: inputs.task == 'safety'
-  #   run: echo 'Doing safety scan.'
-    # uses: pyupio/safety-action@v1
-    # with:
-    #   api-key: ${{ secrets.apiKey }}
-  # - if: inputs.task != 'safety'
-  #   run: just ${{ inputs.task }}
+jobs:
+  python:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: abatilo/actions-poetry@v3
+      with:
+        poetry-version: '1.8.3'
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
+        cache: 'poetry'
+    - uses: extractions/setup-just@v2
+    - name: install dependencies
+      run: just install
+    - if: inputs.task == 'safety'
+      uses: pyupio/safety-action@v1
+      with:
+        api-key: ${{ secrets.apiKey }}
+    - if: inputs.task != 'safety'
+      run: just ${{ inputs.task }}
