--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,18 +8,22 @@ on:
 
 jobs:
   lint:
-    uses: ./.github/workflows/python.yml
-    with:
-      task: lint
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: ./.github/workflows/python.yml
+    # with:
+    #   task: lint
+    - run: just lint
 
-  bandit:
-    uses: ./.github/workflows/python.yml
-    with:
-      task: bandit
+  # bandit:
+  #   uses: ./.github/workflows/python.yml
+  #   with:
+  #     task: bandit
 
-  safety:
-    uses: ./.github/workflows/python.yml
-    with:
-      task: safety
-    secrets:
-      apiKey: ${{ secrets.SAFETY_API_KEY }}
+  # safety:
+  #   uses: ./.github/workflows/python.yml
+  #   with:
+  #     task: safety
+  #   secrets:
+  #     apiKey: ${{ secrets.SAFETY_API_KEY }}
