Refactor safety job (#3)
* Add if to python job so it can be used for safety

* Add some debugging prints

* Comment out safety uses

* Have just one run in the ifs

* Add quotes around the input task string

* Remove some quotes and braces

* Further tweaks

* Readd curly braces

* Add [] to if

* Remove []

* Add () to if

* Adjust if expression

* Restore code to ifs

* Adjust safety usage to hopefully get API key

* Undo previous commit

* Add name to safety job

* Adjust safety job again

* Yet another adjustment to safety job

* Try this in safety job

* Try multiline in safety job

* Try brackets

* Adjust expression

* Undo last commit and try one line uses

* Undo one line uses and try backslash

* Try passing api key through earlier

* Adjust how api key is passed through

* Adjust variable name

* Make API key a secret not an input

* Make API a secret when passing it through

* Update final place I forgot to change to secrets

* Try a different way to run safety

* Minor code adjustment to safety job

* Another minor adjustment

* Try composite action

* Undo last 5 commits

* Try composite action again

* Add actions folder

* Rename action file

* Move actions folder to right place

* Add shell bash

* Use composite action for all jobs

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,29 +8,24 @@ on:
 
 jobs:
   lint:
-    uses: ./.github/workflows/python.yml
-    with:
-      task: lint
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: ./.github/actions
+    - run: just lint
 
   bandit:
-    uses: ./.github/workflows/python.yml
-    with:
-      task: bandit
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: ./.github/actions
+    - run: just bandit
 
   safety:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: abatilo/actions-poetry@v3
-      with:
-        poetry-version: '1.8.3'
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
-        cache: 'poetry'
-    - uses: extractions/setup-just@v2
-    - name: install dependencies
-      run: just install
+    - uses: ./.github/actions
     - uses: pyupio/safety-action@v1
       with:
         api-key: ${{ secrets.SAFETY_API_KEY }}
