--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,7 +10,10 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: cmb84scd/python-action@v1-beta
+    - uses: cmb84scd/python-action@v1-beta.1
+      with:
+        poetry-version: 'latest'
+        python-version: '3.12.2'
     - run: just lint
 
   bandit:
