Remove composite action (#4)
* Test remote action in lint job

* Use remote action in all jobs

* Remove composite action file

* Test new version of github action

* Test action with passed in versions

* Update date in safety policy

* Use newly released action

* Amend version

* Undo last commit

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,22 +10,19 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: ./.github/actions
+    - uses: cmb84scd/python-action@v1
     - run: just lint
 
   bandit:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: ./.github/actions
+    - uses: cmb84scd/python-action@v1
     - run: just bandit
 
   safety:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: ./.github/actions
+    - uses: cmb84scd/python-action@v1
     - uses: pyupio/safety-action@v1
       with:
         api-key: ${{ secrets.SAFETY_API_KEY }}
