--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+django = "^5.0.6"
+python-decouple = "^3.8"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.7.9"
