--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.0.6"
 python-decouple = "^3.8"
+psycopg = "^3.2.1"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.7.9"
