--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,17 @@ authors = ["Catriona Bennett <catrionamairi@blueyonder.co.uk>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
 django = "^5.0.7"
-python-decouple = "^3.8"
+djangorestframework = "^3.15.2"
 psycopg = "^3.2.1"
+python = "^3.12"
+python-decouple = "^3.8"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.7.9"
-safety = "^3.2.3"
-ruff = "^0.5.1"
 pre-commit = "^3.7.1"
+ruff = "^0.5.1"
+safety = "^3.2.3"
 
 [build-system]
 requires = ["poetry-core"]
