--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-decouple = "^3.8"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.7.9"
+coverage = "^7.6.0"
 pre-commit = "^3.7.1"
 ruff = "^0.5.5"
 safety = "^3.2.4"
