Update safety command in pre commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
         pass_filenames: false
       - id: safety
         name: safety
-        entry: poetry run safety scan
+        entry: just safety
         language: system
         files: poetry.lock
         pass_filenames: false
