Add API views (#6)
* Update django and ruff

* Add djangorestframework and reorder deps

* Add views for all and individual facts

* Add facts to url addresses

* Add functionality to retrieve random fact

* Update ruff and safety deps

* Add test for __str__ method, test db and update config

* Add initial test for Fact view

* Add coverage

* Fix test so that it tests correct code

* Add basic test command to justfile

* Add test for random fact

* Refactor view tests to add setUp method

* Amend ruff and pre-commit config

* Add unit tests to pre-commit

* Amend test entry command in pre-commit

* Testing pre-commit

* Adjust pre-commit config to use just recipes

* Make tiny adjustment to the ruff config

* Update safety command in pre commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,33 @@
-exclude: ^animal_fact_api/facts/migrations/
 repos:
--   repo: local
+  - repo: local
     hooks:
-    -   id: ruff
+      - id: ruff
         name: ruff
-        entry: poetry run ruff check
+        entry: just ruff
         language: system
-        files: (^pyproject\.toml|\.py)$
-    -   id: format
+        types: [python]
+        pass_filenames: false
+      - id: format
         name: format
-        entry: poetry run ruff format --check
+        entry: just format
         language: system
-        files: (^pyproject\.toml|\.py)$
-    -   id: safety
+        types: [python]
+        pass_filenames: false
+      - id: safety
         name: safety
-        entry: poetry run safety scan
+        entry: just safety
         language: system
         files: poetry.lock
-    -   id: bandit
+        pass_filenames: false
+      - id: bandit
         name: bandit
-        entry: poetry run bandit -r animal_fact_api -q
+        entry: just bandit
         language: system
         files: (^\.bandit|^animal_fact_api/)$
+        pass_filenames: false
+      - id: test
+        name: test
+        entry: just test
+        language: system
+        files: (^\.coveragerc|\.py)$
+        pass_filenames: false
