--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,22 +7,31 @@ on:
     branches: [ "main" ]
 
 jobs:
-  lint:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: cmb84scd/python-action@v1
-    - run: just lint
+    - run: |
+        sudo systemctl start postgresql.service
+        psql
+        \l
 
-  bandit:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: cmb84scd/python-action@v1
-    - run: just bandit
+  # lint:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: cmb84scd/python-action@v1
+  #   - run: just lint
 
-  safety:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: cmb84scd/python-action@v1
-    - uses: pyupio/safety-action@v1
-      with:
-        api-key: ${{ secrets.SAFETY_API_KEY }}
+  # bandit:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: cmb84scd/python-action@v1
+  #   - run: just bandit
+
+  # safety:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: cmb84scd/python-action@v1
+  #   - uses: pyupio/safety-action@v1
+  #     with:
+  #       api-key: ${{ secrets.SAFETY_API_KEY }}
