Amend psql command to access db

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,8 +13,7 @@ jobs:
     - uses: cmb84scd/python-action@v1
     - run: |
         sudo systemctl start postgresql.service
-        psql
-        \l
+        sudo -u postgres psql -l
 
   # lint:
   #   runs-on: ubuntu-latest
