--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,6 +17,7 @@ jobs:
         just migrate
         sudo -u postgres psql -l
       env:
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
         DB_USERNAME: postgres
         DB_PASSWORD: ''
         DB_NAME: ${{ secrets.DB_NAME }}
