--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,12 +14,12 @@ jobs:
     - name: setup database
       run: |
         sudo systemctl start postgresql.service
-        just migrate
+        sudo -u postgres psql -c ALTER USER postgres WITH PASSWORD ${{ env.DB_PASSWORD }};
         sudo -u postgres psql -l
       env:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
         DB_USERNAME: postgres
-        DB_PASSWORD: ''
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         DB_NAME: ${{ secrets.DB_NAME }}
 
   # lint:
