--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,7 +22,7 @@ jobs:
         sudo -u postgres psql -c "ALTER USER ${{ env.DB_USERNAME }} PASSWORD '${{ env.DB_PASSWORD }}';"
         sudo -u postgres createdb ${{ env.DB_NAME }}
         just migrate
-    - name: run tests
+    - name: Run tests
       run: just test
     - name: Code Coverage Summary Report
       uses: irongut/CodeCoverageSummary@v1.3.0
@@ -31,6 +31,8 @@ jobs:
         badge: true
         format: markdown
         output: both
+    - name: Write to Job Summary
+      run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
 
   # lint:
   #   runs-on: ubuntu-latest
