--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,7 +23,7 @@ jobs:
         sudo -u postgres createdb ${{ env.DB_NAME }}
         just migrate
     - name: Run tests
-      run: just test
+      run: just test-cov
     - name: Code Coverage Summary Report
       uses: irongut/CodeCoverageSummary@v1.3.0
       with:
