--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
         pass_filenames: false
       - id: test
         name: test
-        entry: just test
+        entry: just test-cov
         language: system
         files: (^\.coveragerc|\.py)$
         pass_filenames: false
