--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ django = "^5.1.4"
 djangorestframework = "^3.15.2"
 psycopg = "^3.2.3"
 python = "^3.12"
+gunicorn = "^23.0.0"
+whitenoise = "^6.8.2"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.8.0"
