--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-asgiref==3.8.1 ; python_version >= "3.12" and python_version < "4.0"
-django==5.1.4 ; python_version >= "3.12" and python_version < "4.0"
-djangorestframework==3.15.2 ; python_version >= "3.12" and python_version < "4.0"
-gunicorn==23.0.0 ; python_version >= "3.12" and python_version < "4.0"
-packaging==24.2 ; python_version >= "3.12" and python_version < "4.0"
-psycopg==3.2.3 ; python_version >= "3.12" and python_version < "4.0"
-sqlparse==0.5.3 ; python_version >= "3.12" and python_version < "4.0"
-typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "3.13"
-tzdata==2024.2 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "win32"
-whitenoise==6.8.2 ; python_version >= "3.12" and python_version < "4.0"
+asgiref==3.8.1
+django==5.1.4
+djangorestframework==3.15.2
+gunicorn==23.0.0
+packaging==24.2
+psycopg==3.2.3
+sqlparse==0.5.3
+typing-extensions==4.12.2
+tzdata==2024.2
+whitenoise==6.8.2
