--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ psycopg = "^3.2.3"
 python = "^3.12"
 gunicorn = "^23.0.0"
 whitenoise = "^6.8.2"
+python-decouple = "^3.8"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.8.0"
