--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework==3.15.2
 gunicorn==23.0.0
 packaging==24.2
 psycopg==3.2.3
+python-decouple==3.8
 sqlparse==0.5.3
 typing-extensions==4.12.2
 tzdata==2024.2
